--- a/back-end/drawing-server/pom.xml
+++ b/back-end/drawing-server/pom.xml
@@ -81,7 +81,19 @@
 			<version>3.1.1</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+		<dependency>
+    		<groupId>org.aspectj</groupId>
+    		<artifactId>aspectjrt</artifactId>
+    		<version>1.9.8.RC3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+    		<groupId>org.aspectj</groupId>
+    		<artifactId>aspectjweaver</artifactId>
+    		<version>1.9.8.RC3</version>
+    		<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
