--- a/front-end/drawing-app/package.json
+++ b/front-end/drawing-app/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.0.0",
     "konva": "^8.3.0",
     "ng2-konva": "^6.0.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
